package com.gheno;

public class App {

    public static void main(String[] args) {
        System.out.println(
            "Hello, world! Projeto projetoG criado com sucesso."
        );
    }
}
